Fix minor CSS issues
- Fix mobile view
- Fix horizontal scroll on mobile on homepage
- Bigger sponsor logos
- Bigger schedule table text

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -37,7 +37,7 @@ body > footer,
   display: flex;
   flex-direction: column;
   @media(max-width: $medium-device) {
-    padding: 0 30px;
+    padding: 0 20px;
   }
 }
 
