--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -1,7 +1,3 @@
-body {
-  padding-top: 70px;
-}
-
 nav {
   position: fixed;
   top: 0;
@@ -104,8 +100,8 @@ nav {
         &:after {
           content: "";
           position: absolute;
-          top: 20px;
-          left: 200px;
+          top: 14px;
+          left: 220px;
           width: 2px;
           height: 20px;
           background: #000;
