--- a/_sass/table.scss
+++ b/_sass/table.scss
@@ -19,9 +19,6 @@ tbody th {
   text-align: left;
 }
 
-tbody {
-  font-size: 13px
-}
 tfoot td {
   font-weight: bold
 }
